--- a/app/views/stock_tickers/_stock_ticker.html.haml
+++ b/app/views/stock_tickers/_stock_ticker.html.haml
@@ -1,1 +1,1 @@
-= link_to stock_ticker.to_s, '#', class: 'list-group-item'
+= link_to stock_ticker.to_s, '#', class: 'list-group-item stock-ticker-select', 'data-id': stock_ticker.id
