--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -2,6 +2,8 @@
   #stock-tickers-wrapper
     %h3.title
       = t('stock_ticker_title')
+    .input-days-wrapper
+      = number_field_tag :days, nil, class: 'form-control', placeholder: t('placeholder_input_days')
     .list-group
       = render @stock_tickers
     .pagination
