add button to create a new value on current stock, and real-time feature

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,3 +1,9 @@
+#stock-tickers-wrapper {
+  .input-days-wrapper, .add-value-btn {
+    margin-bottom: 10px;
+  }
+}
+
 #stock-prices-chart-wrapper {
   .axis path,
   .axis line {
