--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -4,6 +4,10 @@
       = t('stock_ticker_title')
     .input-days-wrapper
       = number_field_tag :days, nil, class: 'form-control', placeholder: t('placeholder_input_days')
+    .add-value-btn
+      = form_for @stock_price, remote: true do |f|
+        = f.hidden_field :stock_ticker_id
+        = f.submit t('add_value_on_stock_btn'), class: 'btn btn-sm btn-success disabled'
     .list-group
       = cache @stock_tickers do
         = render @stock_tickers
